[package]
name = "aversion-macros"
description = "macros to support the aversion crate"
repository = "https://github.com/ericseppanen/aversion"
license = "Apache-2.0"
version = "0.1.2"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["extra-traits"]}
proc-macro2 = "1.0"

[dev-dependencies]
aversion = { path = "../aversion", version= "<=0.2"}
