[package]
name = "aversion"
description = "Versioned data structures with auto-upgrading"
keywords = ["versions", "versioned"]
categories = ["data-structures", "encoding"]
repository = "https://github.com/ericseppanen/aversion"
license = "Apache-2.0"
version = "0.2.0"
authors = ["Eric Seppanen <eds@reric.net>"]
readme = "README.md"
edition = "2018"

[features]
default = ["serde_cbor"]

[dependencies]
aversion-macros = { path="../aversion-macros", version= "^0.2"}
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
byteorder = "1.4"
serde_cbor = { version = "0.11", optional = true }

[dev-dependencies]
serde_cbor = "0.11"
