[package]
name = "versioned-macros"
version = "0.1.0"
authors = ["Eric Seppanen <eds@reric.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["extra-traits"]}
proc-macro2 = "1.0"

[dev-dependencies]
versioned = { path = "../versioned" }
