[package]
name = "versioned"
version = "0.1.0"
authors = ["Eric Seppanen <eds@reric.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
versioned-macros = { path="../versioned-macros" }
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"

[dev-dependencies]
serde_cbor = "0.11"
